# StreamlitGeneratePenalties

./: .gitignore  GeneratePenaltiesStreamlit.py  README  README.md  pyproject.toml
