[project]
name = "streamlitgeneratepenalties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker>=1.9.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "scipy>=1.15.2",
    "streamlit>=1.43.2",
    "xlsxwriter>=3.2.2",
]
